--- a/tagger.ipynb
+++ b/tagger.ipynb
@@ -16,11 +16,11 @@
     "        'n': \"NOUN\",\n",
     "        'num': \"NUM\",\n",
     "        'v-fin': \"VERB\",\n",
-    "        'v-inf': \"VERBx\",\n",
-    "        'v-ger': \"VERBa\",\n",
-    "        'v-pcp': \"VERBs\",\n",
-    "        'pron-det': \"PRONq\",\n",
-    "        'pron-indp': \"PRONf\",\n",
+    "        'v-inf': \"VERB\",\n",
+    "        'v-ger': \"VERB\",\n",
+    "        'v-pcp': \"VERB\",\n",
+    "        'pron-det': \"PRON\",\n",
+    "        'pron-indp': \"PRON\",\n",
     "        'pron-pers': \"PRON\",\n",
     "        'art': \"DET\",\n",
     "        'adv': \"ADV\",\n",
